# plantsat-payload-software

./: .gitignore  CMakeLists.txt  README.md  install.sh
scripts/: install-service.sh  suchai-fs.service  zmq-hub.service
scripts/ansible/: hosts  playbook.yml
src/drivers/: mcp9808.c
src/drivers/apds9250/: CMakeLists.txt  apds9250.c  apds9250_example.c
src/drivers/apds9250/include/: apds9250.h
src/drivers/bmp388/: CMakeLists.txt  bmp3.c  bmp3_example.c  bmp3_interface.c
src/drivers/bmp388/include/: bmp3.h  bmp3_defs.h  bmp3_interface.h
src/drivers/hdc1010/: CMakeLists.txt  hdc1010.c  hdc1010_example.c
src/drivers/hdc1010/include/: hdc1010.h
src/drivers/include/: mcp9808.h
src/drivers/lp5562/: CMakeLists.txt  lp5562.c  lp5562_example.c
src/drivers/lp5562/include/: lp5562.h
src/drivers/mcp9808/: CMakeLists.txt  mcp9808.c  mcp9808_example.c
src/drivers/mcp9808/include/: mcp9808.h
src/drivers/rwdrv10987/: CMakeLists.txt  rwdrv10987.c  rwdrv10987_example.c
src/drivers/rwdrv10987/include/: rwdrv10987.h
src/drivers/scd30/: CMakeLists.txt  scd30.c  scd30_example.c
src/drivers/scd30/include/: scd30.h
src/drivers/veml6070/: CMakeLists.txt  veml6070.c  veml6070_example.c
src/drivers/veml6070/include/: veml6070.h
src/system/: cmdSensors.c  repoDataSchema.c  taskInit.c  taskSensors.c
src/system/include/: cmdSensors.h  repoDataSchema.h  taskInit.h  taskSensors.h
